Cell/Cell.g4
grammar Cell;

//语法
prog :  stat+ ;

stat : expr SEMI
     | ID '=' expr SEMI ;

expr : expr ('*'|'/') expr
     | expr ('+'|'-') expr
     | INT
     | ID
     | '(' expr ')'  ;


// 词法  '\r'?

ID : [a-zA-Z]+ ;
INT  : [0-9]+ ;
SEMI : ';' ;
NEWLINE : '\r'? '\n' -> skip ;
WS      : [ \t]+ -> skip   ;
